--- a/src/lib/styles/global.scss
+++ b/src/lib/styles/global.scss
@@ -2,7 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    height: 100%;
+}
+body {
+    height: 100%;
+    margin: 0;
+    background: rgb(5, 2, 23);
+    // background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#cbccc8)) fixed;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
 body {
     // background: linear-gradient(to bottom, rgb(5, 2, 23) 0%, rgb(13, 15, 102) 100%);
-    background: rgb(5, 2, 23);
+    // background: rgb(5, 2, 23);
 }
